# rust-converter

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  next.config.mjs  package.json
app/: globals.css  layout.tsx  page.tsx
app/components/: DataConverter.tsx  DocumentConverter.tsx  ImageConverter.tsx
app/hooks/: useTauriIpc.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  main.rs
src-tauri/src/commands/: data_converter.rs  document_builder.rs  image_converter.rs  mod.rs
src-tauri/src/services/: data_service.rs  document_service.rs  image_converter.rs  image_service.rs  mod.rs
