[package]
name = "multi-converter"
version = "0.1.0"
description = "A high-performance Swiss Army Knife desktop app"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0" # Clean error handling
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

# Module A: Tabular Data Converter
calamine = "0.22" # Fast Excel parsing
csv = "1.3"

# Module B: Bulk Image Converter
image = "0.24"    # Image processing (JPG/PNG/WebP)
rayon = "1.8"     # Multi-threading 

# Module C: Document Renderer
printpdf = "0.5"  # PDF Generation
tauri-plugin-dialog = "2.6.0"

[features]
